--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,23 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# compiled output
+/dist
+/tmp
+
 # dependencies
 /node_modules
-
-# testing
-/coverage
-
-# production
-/build
+/bower_components
 
 # misc
-.DS_Store
-._.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+yarn-error.log
+testem.log
+
+# ember-try
+.node_modules.ember-try/
+bower.json.ember-try
+package.json.ember-try
