--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
+    "ember-truth-helpers": "^2.0.0",
     "liquid-fire": "^0.29.1",
     "loader.js": "^4.2.3"
   },
