--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "dexie": "2.0.1",
     "ember-ajax": "^3.0.0",
+    "ember-browserify": "^1.2.1",
     "ember-cli": "~2.16.2",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
@@ -36,6 +38,7 @@
     "ember-cli-uglify": "^2.0.0",
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
+    "ember-indexeddb": "^1.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
@@ -45,6 +48,5 @@
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
-  },
-  "dependencies": {}
+  }
 }
