--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
-    "dexie": "2.0.1",
     "ember-ajax": "^3.0.0",
     "ember-browserify": "^1.2.1",
     "ember-cli": "~2.16.2",
@@ -31,6 +30,7 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-moment-shim": "^3.5.3",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-sass": "^7.1.4",
     "ember-cli-shims": "^1.1.0",
@@ -49,6 +49,7 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
-    "moment": "^2.20.1"
+    "ember-moment": "^7.6.0",
+    "lodash": "3.10.1"
   }
 }
