tracking, ui, connection handling, etc

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-local-storage": "^1.4.1",
     "ember-math-helpers": "^2.4.1",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
