--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "broccoli-asset-rev": "^2.4.5",
+    "devtron": "^1.4.0",
+    "electron-forge": "^5.2.1",
+    "electron-prebuilt-compile": "2.0.0",
     "ember-ajax": "^3.0.0",
     "ember-browserify": "^1.2.1",
     "ember-cli": "~2.18.2",
@@ -38,6 +44,7 @@
     "ember-cli-uglify": "^2.0.0",
     "ember-composable-helpers": "^2.1.0",
     "ember-data": "~2.18.0",
+    "ember-electron": "^2.8.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-local-storage": "^1.4.1",
@@ -56,6 +63,12 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
+    "electron-compile": "^6.4.2",
+    "electron-protocol-serve": "^1.3.0",
+    "electron-squirrel-startup": "^1.0.0",
     "sass-semantic-ui": "^2.2.12-3"
+  },
+  "config": {
+    "forge": "./ember-electron/electron-forge-config.js"
   }
 }
