--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gloss",
-  "version": "1.2.0-rc.0",
+  "version": "1.2.0",
   "private": false,
   "description": "A heads up display for space travel.",
   "license": "MIT",
