--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-cli-uglify": "^2.0.0",
     "ember-composable-helpers": "^2.1.0",
     "ember-concurrency": "^0.8.19",
+    "ember-d3": "^0.4.4",
     "ember-data": "~2.18.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
@@ -57,5 +58,8 @@
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
+  },
+  "dependencies": {
+    "d3": "4.13.0"
   }
 }
