--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gloss",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0-beta.3",
   "private": false,
   "description": "A heads up display for space travel.",
   "license": "MIT",
@@ -46,6 +46,7 @@
     "ember-local-storage": "^1.4.1",
     "ember-math-helpers": "^2.4.1",
     "ember-moment": "^7.6.0",
+    "ember-resize": "^0.0.17",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.18.0",
     "ember-truth-helpers": "^2.0.0",
