--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gloss",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "private": false,
   "description": "A heads up display for space travel.",
   "license": "MIT",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
+    "ember-bowser": "^0.0.3",
     "ember-browserify": "^1.2.1",
     "ember-cli": "~2.18.2",
     "ember-cli-app-version": "^3.0.0",
